Fix dropdown spacing

--- a/nih-plug/src/editor/style.css
+++ b/nih-plug/src/editor/style.css
@@ -45,7 +45,6 @@ dropdown .title {
   child-top: 1s;
   child-bottom: 1s;
   color: #363636;
-  bottom: 6px;
 }
 
 dropdown .dropdown-item {
